k8s/app/report-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-service
  template:
    metadata:
      labels:
        app: report-service
    spec:
      containers:
        - name: report-service
          image: minyong1234/report-service:v2   # ← 수정
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: app
spec:
  selector:
    app: report-service
  ports:
    - port: 8003
      targetPort: 8000
