k8s/app/result-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-service
  template:
    metadata:
      labels:
        app: result-service
    spec:
      containers:
        - name: result-service
          image: minyong1234/result-service:v3   # ← 수정
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: app
spec:
  selector:
    app: result-service
  ports:
    - port: 8001        # checklist-service와 포트 구분
      targetPort: 8000
