k8s/app/scan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scan-service
  template:
    metadata:
      labels:
        app: scan-service
    spec:
      containers:
        - name: scan-service
          image: minyong1234/scan-service:v3   # ← 수정
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: scan-service
  namespace: app
spec:
  selector:
    app: scan-service
  ports:
    - port: 8002
      targetPort: 8000
